--- a/organizer/templates/products/products.html
+++ b/organizer/templates/products/products.html
@@ -370,7 +370,7 @@
 
 <!-- should be included before products.js -->
 <!-- production version, optimized for size and speed -->
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script type="application/javascript" src="{{ url_for('static', filename='js/products.js') }}"></script>
 
 {% endblock %}
