--- a/organizer/templates/trips/edit.html
+++ b/organizer/templates/trips/edit.html
@@ -171,7 +171,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 <!-- production version, optimized for size and speed -->
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script type="application/javascript" src="{{ url_for('static', filename='js/trip_edit.js') }}"></script>
 
 {% endblock %}
