--- a/app/organizer/templates/trips/trips.html
+++ b/app/organizer/templates/trips/trips.html
@@ -19,14 +19,7 @@
             </div>
             <div class="modal-body">
                 <div class="form-group row">
-                    <label for="sharingType" class="col-sm-8 col-form-label">{{ $t('trips.shareModal.typeSelectorTitle') }}</label>
-                    <div class="col-sm-4">
-                        <select id="sharingType" class="form-control" v-model="sharingType">
-                            <option disabled value="0">...</option>
-                            <option value="read">{{ $t('trips.shareModal.readOption') }}</option>
-                            <option value="write">{{ $t('trips.shareModal.writeOption') }}</option>
-                        </select>
-                    </div>
+                    <label for="sharingType" class="col-sm-12">{{ $t('trips.shareModal.typeSelectorTitle') }}</label>
                 </div>
                 <div class="form-group row">
                     <div class="input-group col">
