Remove products page completely

--- a/app/organizer/templates/base.html
+++ b/app/organizer/templates/base.html
@@ -29,7 +29,7 @@
             urls: {
                 mainPage: '/',
                 tripsPage: '{{ url_for("trips.index") }}',
-                productsPage: '{{ url_for("products.index") }}',
+                productsPage: '/products/',
                 usersPage: '{{ url_for("users.index") }}',
                 adminPage: '{{ url_for("developer.administration") }}',
                 userInfo: '{{ url_for("api.auth.user") }}',
