Remove mentions of trips.index from Python code

--- a/app/organizer/templates/base.html
+++ b/app/organizer/templates/base.html
@@ -28,7 +28,7 @@
         let globals = {
             urls: {
                 mainPage: '/',
-                tripsPage: '{{ url_for("trips.index") }}',
+                tripsPage: '/trips/',
                 productsPage: '/products/',
                 usersPage: '{{ url_for("users.index") }}',
                 adminPage: '{{ url_for("developer.administration") }}',
