--- a/app/organizer/templates/trips/incorrect.html
+++ b/app/organizer/templates/trips/incorrect.html
@@ -21,7 +21,7 @@
 
 <script>
     setTimeout(function () {
-        window.location.href = '/trips';
+        window.location.href = '/trips/';
     }, 5000);
 </script>
 
