Remove useless Yandex counter from password reset email

--- a/app/organizer/templates/reset_password_email.html
+++ b/app/organizer/templates/reset_password_email.html
@@ -1,43 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+  </head>
 
-<head>
-    <meta charset="utf-8">
-
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-            m[i].l = 1 * new Date();
-            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-        ym(88901903, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <noscript>
-        <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
-    </noscript>
-    <!-- /Yandex.Metrika counter -->
-</head>
-
-<body>
+  <body>
     <h1>Сброс пароля</h1>
     <p>
-        Кто-то, возможно не вы, запросил изменение пароля на сайте {{ sitename }}.
-        Если это были не вы, проигнорируйте это письмо и ничего страшного не случится.
+      Кто-то запросил изменение пароля на сайте {{ sitename }}. Если это были не
+      вы, проигнорируйте это письмо и ничего страшного не случится.
     </p>
     <p>
-        Если это были вы, то пройдите по следующей ссылке и задайте новый пароль:
-        <a href="{{ reset_link }}">{{reset_link }}</a>.
-        Эта ссылка будет действительна в течение 3-х дней.
+      Если это были вы, то пройдите по следующей ссылке и задайте новый пароль:
+      <a href="{{ reset_link }}">{{reset_link }}</a>. Эта ссылка будет
+      действительна в течение 3-х дней.
     </p>
-</body>
-
+  </body>
 </html>
