--- a/app/organizer/templates/auth/auth.html
+++ b/app/organizer/templates/auth/auth.html
@@ -55,7 +55,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <title>{{ string_table['Site title'] }}</title>
+    <title>Hikehub</title>
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
