--- a/web/src/css/landing.scss
+++ b/web/src/css/landing.scss
@@ -1,4 +1,16 @@
-@import 'bootstrap';
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/maps';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/utilities';
+@import '~bootstrap/scss/utilities/api';
+
+@import '~bootstrap/scss/root';
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/type';
+@import '~bootstrap/scss/containers';
+@import '~bootstrap/scss/buttons';
+@import '~bootstrap/scss/grid';
 
 @font-face {
   font-family: 'Montserrat';
