--- a/web/src/css/landing.scss
+++ b/web/src/css/landing.scss
@@ -14,14 +14,14 @@
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../../static/fonts/Montserrat-VariableFont_wght.ttf')
-    format('truetype');
+  src: url('../../static/fonts/Montserrat-VariableFont_wght.woff2')
+    format('woff2');
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../../static/fonts/OpenSans-VariableFont_wdth,wght.ttf')
-    format('truetype');
+  src: url('../../static/fonts/OpenSans-VariableFont_wdth\,wght.woff2')
+    format('woff2');
 }
 
 #header {
