--- a/web/src/css/landing.scss
+++ b/web/src/css/landing.scss
@@ -1,15 +1,27 @@
-@import 'bootstrap';
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/maps';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/utilities';
+@import '~bootstrap/scss/utilities/api';
+
+@import '~bootstrap/scss/root';
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/type';
+@import '~bootstrap/scss/containers';
+@import '~bootstrap/scss/buttons';
+@import '~bootstrap/scss/grid';
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../../static/fonts/Montserrat-VariableFont_wght.ttf')
-    format('truetype');
+  src: url('../../static/fonts/Montserrat-VariableFont_wght.woff2')
+    format('woff2');
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../../static/fonts/OpenSans-VariableFont_wdth,wght.ttf')
-    format('truetype');
+  src: url('../../static/fonts/OpenSans-VariableFont_wdth\,wght.woff2')
+    format('woff2');
 }
 
 #header {
