--- a/web/src/css/landing.scss
+++ b/web/src/css/landing.scss
@@ -48,14 +48,14 @@
 h1,
 h2,
 h3 {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
 }
 
 p,
 a,
 li {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
 }
 
 .btn {
@@ -89,7 +89,7 @@ a {
 }
 
 .btn {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
 }
 
 .btn-lg {
