Move typefaces definition out of landing scss

--- a/web/src/css/landing.scss
+++ b/web/src/css/landing.scss
@@ -12,17 +12,7 @@
 @import '~bootstrap/scss/buttons';
 @import '~bootstrap/scss/grid';
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../../static/fonts/Montserrat-VariableFont_wght.woff2')
-    format('woff2');
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../../static/fonts/OpenSans-VariableFont_wdth\,wght.woff2')
-    format('woff2');
-}
+@import './typefaces.css';
 
 #header {
   background: url('../../static/img/1.jpg');
