--- a/web/src/css/landing.css
+++ b/web/src/css/landing.css
@@ -1,28 +1,17 @@
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/maps';
-@import '~bootstrap/scss/mixins';
-@import '~bootstrap/scss/utilities';
-@import '~bootstrap/scss/utilities/api';
-
-@import '~bootstrap/scss/root';
-@import '~bootstrap/scss/reboot';
-@import '~bootstrap/scss/type';
-@import '~bootstrap/scss/containers';
-@import '~bootstrap/scss/buttons';
-@import '~bootstrap/scss/grid';
-
 @import './typefaces.css';
 
-#header {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+header {
   background: url('../../static/img/1.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
   background-position: 100% 100%;
-  height: 100vh;
+
+  @apply px-3 w-full h-dvh bg-cover bg-no-repeat;
 }
 
-#footer {
+footer {
   background-image: linear-gradient(
     180deg,
     #fcc5e4 -56.7%,
@@ -38,27 +27,15 @@
 h1,
 h2,
 h3 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-}
-
-p,
-a,
-li {
-  font-family: 'Open Sans', sans-serif;
-}
-
-.btn {
-  text-decoration: none;
+  @apply font-display font-semibold;
 }
 
 a {
-  text-decoration: underline;
+  @apply underline;
   text-underline-offset: 0.25rem;
 }
 
 .display-2 {
-  font-weight: 600;
   letter-spacing: 0.5rem;
 }
 
@@ -79,7 +56,7 @@ a {
 }
 
 .btn {
-  font-family: 'Montserrat', sans-serif;
+  @apply font-display;
 }
 
 .btn-lg {
@@ -90,7 +67,7 @@ a {
 
 .btn-primary {
   background-color: #ffc600;
-  color: var(--dark);
+  color: #212529;
   border-color: #ffc600;
 }
 
@@ -113,19 +90,9 @@ a {
 .btn-secondary:hover {
   background-color: #ffd133;
   border-color: #ffd133;
-  color: var(--dark);
+  color: #212529;
 }
 
 .btn-secondary:active .btn-secondary:focus {
   background-color: #ffc600;
-}
-
-.share-button {
-  background-color: royalblue;
-  border-radius: 4px;
-  transition: 150ms;
-}
-
-.share-button:hover {
-  background-color: darkblue;
 }
