--- a/web/src/css/landing.css
+++ b/web/src/css/landing.css
@@ -123,6 +123,15 @@ a {
 
 
 
+.container-fluid-bs {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * .5);
+  padding-left: calc(var(--bs-gutter-x) * .5);
+  margin-right: auto;
+  margin-left: auto;
+}
 
 .row-bs {
   --bs-gutter-x: 1.5rem;
@@ -132,6 +141,19 @@ a {
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
+}
+
+.col-bs {
+  flex: 1 0 0%;
+}
+
+.pb-5-bs {
+  padding-bottom: 3rem !important;
+}
+
+.py-5-bs {
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
 }
 
 .justify-content-center-bs {
