--- a/web/src/css/landing.css
+++ b/web/src/css/landing.css
@@ -4,6 +4,65 @@
 @tailwind components;
 @tailwind utilities;
 
+.btn-primary-bs {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #0d6efd;
+  --bs-btn-border-color: #0d6efd;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #0b5ed7;
+  --bs-btn-hover-border-color: #0a58ca;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #0a58ca;
+  --bs-btn-active-border-color: #0a53be;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #0d6efd;
+  --bs-btn-disabled-border-color: #0d6efd;
+}
+
+.btn-bs {
+  --bs-btn-padding-x: .75rem;
+  --bs-btn-padding-y: .375rem;
+  --bs-btn-font-family: ;
+  --bs-btn-font-size: 1rem;
+  --bs-btn-font-weight: 400;
+  --bs-btn-line-height: 1.5;
+  --bs-btn-color: #212529;
+  --bs-btn-bg: transparent;
+  --bs-btn-border-width: 1px;
+  --bs-btn-border-color: transparent;
+  --bs-btn-border-radius: .375rem;
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
+  --bs-btn-disabled-opacity: .65;
+  --bs-btn-focus-box-shadow: 0 0 0 .25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
+  display: inline-block;
+  padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
+  font-family: var(--bs-btn-font-family);
+  font-size: var(--bs-btn-font-size);
+  font-weight: var(--bs-btn-font-weight);
+  line-height: var(--bs-btn-line-height);
+  color: var(--bs-btn-color);
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
+  border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
+  border-radius: var(--bs-btn-border-radius);
+  background-color: var(--bs-btn-bg);
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-lg-bs {
+  --bs-btn-padding-y: .5rem;
+  --bs-btn-padding-x: 1rem;
+  --bs-btn-font-size: 1.25rem;
+  --bs-btn-border-radius: .5rem;
+}
+
 header {
   background: url('../../static/img/1.jpg');
   background-size: cover;
@@ -25,12 +84,7 @@ footer {
   );
 }
 
-h1,
-h2,
-h3 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-}
+
 
 p,
 a,
@@ -50,22 +104,6 @@ a {
 .display-2-bs {
   font-weight: 600;
   letter-spacing: 0.5rem;
-}
-
-@media (max-width: 576px) {
-  .display-2-bs {
-    font-size: 3.25rem;
-  }
-
-  .h2-bs {
-    font-size: 1.75rem;
-  }
-}
-
-@media (max-width: 992px) {
-  #header {
-    background-position: 75% 100%;
-  }
 }
 
 .btn-bs {
@@ -137,6 +175,16 @@ img, svg {
   display: initial;
 }
 
+.container-bs {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * .5);
+  padding-left: calc(var(--bs-gutter-x) * .5);
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .container-fluid-bs {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
@@ -157,6 +205,31 @@ img, svg {
   margin-left: calc(-0.5 * var(--bs-gutter-x));
 }
 
+.row-bs > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * .5);
+  padding-left: calc(var(--bs-gutter-x) * .5);
+  margin-top: var(--bs-gutter-y);
+}
+
+.text-center-bs {
+  text-align: center !important;
+}
+
+h2, .h2 {
+  font-size: calc(1.325rem + .9vw);
+}
+
+h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1
+{
+  margin-top: 0;
+  margin-bottom: .5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
 .d-none-bs {
   display: none !important;
 }
@@ -165,10 +238,26 @@ img, svg {
   display: flex !important;
 }
 
+.d-block-bs {
+  display: block !important;
+}
+
 @media (min-width: 576px) {
+  .container-bs {
+      max-width: 540px;
+  }
+
   .col-sm-2-bs {
     flex: 0 0 auto;
     width: 16.66666667%;
+  }
+
+  .display-2-bs {
+    font-size: 3.25rem;
+  }
+
+  .h2-bs {
+    font-size: 1.75rem;
   }
 }
 
@@ -197,6 +286,14 @@ img, svg {
     flex: 0 0 auto;
     width: 50%;
   }
+
+  header {
+    background-position: 75% 100%;
+  }
+
+  .text-lg-start-bs {
+    text-align: left !important;
+  }
 }
 
 .col-bs {
@@ -223,4 +320,11 @@ img, svg {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
 }
