--- a/web/src/css/landing.css
+++ b/web/src/css/landing.css
@@ -37,7 +37,6 @@
   --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
   --bs-btn-disabled-opacity: .65;
   --bs-btn-focus-box-shadow: 0 0 0 .25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
-  display: inline-block;
   padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
   font-family: var(--bs-btn-font-family);
   font-size: var(--bs-btn-font-size);
@@ -115,15 +114,7 @@ a {
   background-color: #ffc600;
 }
 
-.share-button-bs {
-  @apply rounded-md transition-colors;
 
-  background-color: royalblue;
-}
-
-.share-button-bs:hover {
-  background-color: darkblue;
-}
 
 
 
@@ -145,6 +136,7 @@ img, svg {
 .container-bs {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
+
   width: 100%;
   padding-right: calc(var(--bs-gutter-x) * .5);
   padding-left: calc(var(--bs-gutter-x) * .5);
@@ -155,6 +147,7 @@ img, svg {
 .container-fluid-bs {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
+
   width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
@@ -163,19 +156,17 @@ img, svg {
 }
 
 .row-bs {
+  @apply flex flex-wrap;
+
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
 }
 
 .row-bs > * {
-  flex-shrink: 0;
-  width: 100%;
-  max-width: 100%;
+  @apply shrink-0 w-full max-w-full;
+
   padding-right: calc(var(--bs-gutter-x) * .5);
   padding-left: calc(var(--bs-gutter-x) * .5);
   margin-top: var(--bs-gutter-y);
@@ -185,12 +176,11 @@ img, svg {
   text-align: center !important;
 }
 
-h2, .h2 {
+h2, .h2-bs {
   font-size: calc(1.325rem + .9vw);
 }
 
-h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1
-{
+h2, .h2-bs, h1, .h1-bs {
   margin-top: 0;
   margin-bottom: .5rem;
   font-weight: 500;
@@ -227,11 +217,6 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1
     max-width: 720px;
   }
 
-  .col-md-8-bs {
-    flex: 0 0 auto;
-    width: 66.66666667%;
-  }
-
   .col-md-2-bs {
     flex: 0 0 auto;
     width: 16.66666667%;
@@ -242,10 +227,6 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1
   .col-lg-6-bs {
     flex: 0 0 auto;
     width: 50%;
-  }
-
-  header {
-    background-position: 75% 100%;
   }
 
   .text-lg-start-bs {
@@ -261,30 +242,19 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1
   .display-2-bs {
     font-size: 4.5rem;
   }
+
+  .container-bs {
+    max-width: 1140px;
+  }
 }
 
 .col-bs {
   @apply grow shrink-0 basis-0;
 }
 
-p {
-  @apply mt-0 mb-4;
-}
-
-h1,
-h2,
-h3 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-}
-
-.text-uppercase-bs {
-  text-transform: uppercase !important;
-}
-
-
 .display-2-bs {
-  font-weight: 600;
+  @apply font-semibold;
+
   letter-spacing: 0.5rem;
 }
 
@@ -326,4 +296,27 @@ footer {
     #0c1db8 95.79%,
     #020f75 118.58%
   );
+}
+
+p {
+  @apply mt-0 mb-4;
+}
+
+h1,
+h2 {
+  @apply font-display font-semibold;
+}
+
+@media (min-width: 992px) {
+  header {
+    background-position: 75% 100%;
+  }
+}
+
+.share-button {
+  @apply rounded-md transition-colors bg-blue-500 hover:bg-blue-900;
+}
+
+.col-md-8 {
+  @apply md:grow-0 md:shrink-0 md:basis-auto md:w-2/3;
 }
