--- a/web/src/css/landing.css
+++ b/web/src/css/landing.css
@@ -4,67 +4,19 @@
 @tailwind components;
 @tailwind utilities;
 
-.btn-primary-bs {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #0d6efd;
-  --bs-btn-border-color: #0d6efd;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #0b5ed7;
-  --bs-btn-hover-border-color: #0a58ca;
-  --bs-btn-focus-shadow-rgb: 49, 132, 253;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #0a58ca;
-  --bs-btn-active-border-color: #0a53be;
-  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #0d6efd;
-  --bs-btn-disabled-border-color: #0d6efd;
-}
-
 .btn-bs {
-  --bs-btn-padding-x: .75rem;
-  --bs-btn-padding-y: .375rem;
-  --bs-btn-font-family: ;
-  --bs-btn-font-size: 1rem;
-  --bs-btn-font-weight: 400;
-  --bs-btn-line-height: 1.5;
+  @apply select-none text-center cursor-pointer no-underline align-middle transition-all leading-normal;
+
   --bs-btn-color: #212529;
   --bs-btn-bg: transparent;
-  --bs-btn-border-width: 1px;
   --bs-btn-border-color: transparent;
-  --bs-btn-border-radius: .375rem;
-  --bs-btn-hover-border-color: transparent;
-  --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
-  --bs-btn-disabled-opacity: .65;
-  --bs-btn-focus-box-shadow: 0 0 0 .25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
-  padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
-  font-size: var(--bs-btn-font-size);
-  font-weight: var(--bs-btn-font-weight);
-  line-height: var(--bs-btn-line-height);
   color: var(--bs-btn-color);
-  text-align: center;
-  text-decoration: none;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-  user-select: none;
-  border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
-  border-radius: var(--bs-btn-border-radius);
+  border: 1px solid var(--bs-btn-border-color);
   background-color: var(--bs-btn-bg);
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 .btn-lg-bs {
-  --bs-btn-padding-y: .5rem;
-  --bs-btn-padding-x: 1rem;
-  --bs-btn-font-size: 1.25rem;
-  --bs-btn-border-radius: .5rem;
-}
-
-.btn-lg-bs {
-  border-radius: 2.5rem;
-  border-width: 0.15rem;
-  font-size: 1.75rem;
+  @apply py-2 px-4 rounded-[2.5rem] border-[0.15rem] text-[1.75rem];
 }
 
 .btn-primary-bs {
@@ -99,58 +51,19 @@
   background-color: #ffc600;
 }
 
-
-
-
-
-
-
-
-
-
-
-* {
-  box-sizing: border-box;
-}
-
-img, svg {
-  vertical-align: middle;
-  display: initial;
-}
-
 .container-bs {
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
-
-  width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * .5);
-  padding-left: calc(var(--bs-gutter-x) * .5);
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.container-fluid-bs {
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
-
-  width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-right: auto;
-  margin-left: auto;
+  @apply w-full mx-auto px-3;
 }
 
 .row-bs {
-  @apply flex flex-wrap;
-
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
-  margin-right: calc(-0.5 * var(--bs-gutter-x));
-  margin-left: calc(-0.5 * var(--bs-gutter-x));
+  @apply flex flex-wrap -mx-3;
 }
 
 .row-bs > * {
   @apply shrink-0 w-full max-w-full;
+
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
 
   padding-right: calc(var(--bs-gutter-x) * .5);
   padding-left: calc(var(--bs-gutter-x) * .5);
@@ -165,23 +78,13 @@ h2, .h2-bs, h1 {
   @apply mt-0 mb-2 leading-[1.2];
 }
 
-.display-2-bs {
-  @apply leading-[1.2];
-
-  font-size: calc(1.575rem + 3.9vw);
+.h2-bs {
+  @apply sm:text-[1.75rem] xl:text-[2rem];
 }
 
 @media (min-width: 576px) {
   .container-bs {
       max-width: 540px;
-  }
-
-  .display-2-bs {
-    font-size: 3.25rem;
-  }
-
-  .h2-bs {
-    font-size: 1.75rem;
   }
 }
 
@@ -198,16 +101,8 @@ h2, .h2-bs, h1 {
 }
 
 @media (min-width: 1200px) {
-  .display-2-bs {
-    font-size: 4.5rem;
-  }
-
   .container-bs {
     max-width: 1140px;
-  }
-
-  .h2-bs {
-    font-size: 2rem;
   }
 }
 
@@ -231,30 +126,27 @@ h2, .h2-bs, h1 {
   @apply lg:grow-0 lg:shrink-0 lg:basis-auto lg:w-6/12;
 }
 
-.display-2-bs {
-  @apply tracking-[.5rem];
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+* {
+  @apply box-border;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 header {
-  background: url('../../static/img/1.jpg');
+  background-image: url('../../static/img/1.jpg');
   background-position: 100% 100%;
   height: 100vh;
 
@@ -295,4 +187,10 @@ h2, .h2-bs {
 
 .share-button {
   @apply rounded-md transition-colors bg-blue-500 hover:bg-blue-900;
+}
+
+img, svg {
+  @apply align-middle;
+
+  display: initial;
 }
