--- a/web/src/css/landing.css
+++ b/web/src/css/landing.css
@@ -4,57 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.btn-bs {
-  @apply select-none text-center cursor-pointer no-underline align-middle transition-all leading-normal;
-
-  --bs-btn-color: #212529;
-  --bs-btn-bg: transparent;
-  --bs-btn-border-color: transparent;
-  color: var(--bs-btn-color);
-  border: 1px solid var(--bs-btn-border-color);
-  background-color: var(--bs-btn-bg);
-}
-
-.btn-lg-bs {
-  @apply py-2 px-4 rounded-[2.5rem] border-[0.15rem] text-[1.75rem];
-}
-
-.btn-primary-bs {
-  background-color: #ffc600;
-  color: var(--dark);
-  border-color: #ffc600;
-}
-
-.btn-primary-bs:hover {
-  background-color: #ffd133;
-  border-color: #ffd133;
-}
-
-.btn-primary-bs:active {
-  background-color: #ffd133;
-  border-color: #ffd133;
-}
-
-.btn-secondary-bs {
-  background-color: #00ffc600;
-  color: #ffc600;
-  border-color: #ffc600;
-}
-
-.btn-secondary-bs:hover {
-  background-color: #ffd133;
-  border-color: #ffd133;
-  color: var(--dark);
-}
-
-.btn-secondary-bs:active .btn-secondary-bs:focus {
-  background-color: #ffc600;
-}
-
-.container-bs {
-  @apply w-full mx-auto px-3;
-}
-
 .row-bs {
   @apply flex flex-wrap -mx-3;
 }
@@ -82,48 +31,16 @@ h2, .h2-bs, h1 {
   @apply sm:text-[1.75rem] xl:text-[2rem];
 }
 
-@media (min-width: 576px) {
-  .container-bs {
-      max-width: 540px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container-bs {
-    max-width: 720px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container-bs {
-    max-width: 960px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container-bs {
-    max-width: 1140px;
-  }
-}
-
-.col-bs {
+.col {
   @apply grow shrink-0 basis-0;
 }
 
-.col-sm-2-bs {
-  @apply sm:grow-0 sm:shrink-0 sm:basis-auto sm:w-2/12;
+.col-md-2 {
+  @apply md:grow-0 shrink-0 md:basis-auto md:w-2/12;
 }
 
-.col-md-2-bs {
-  @apply md:grow-0 md:shrink-0 md:basis-auto md:w-2/12;
-}
-
-.col-md-8 {
-  @apply md:grow-0 md:shrink-0 md:basis-auto md:w-8/12;
-}
-
-.col-lg-6-bs {
-  @apply lg:grow-0 lg:shrink-0 lg:basis-auto lg:w-6/12;
+.col-lg-6 {
+  @apply lg:grow-0 shrink-0 lg:basis-auto lg:w-6/12;
 }
 
 
@@ -193,4 +110,26 @@ img, svg {
   @apply align-middle;
 
   display: initial;
+}
+
+.btn {
+  @apply select-none text-center cursor-pointer no-underline align-middle transition-all leading-normal;
+  @apply py-2 px-4 rounded-[2.5rem] border-[0.15rem] text-[1.75rem] border-solid border-transparent;
+  @apply bg-transparent text-[#212529];
+}
+
+.btn-primary {
+  @apply bg-[#ffc600] border-[#ffc600];
+  @apply hover:bg-[#ffd133] hover:border-[#ffd133] hover:text-white;
+  @apply active:bg-[#ffd133] active:border-[#ffd133];
+}
+
+.btn-secondary {
+  @apply text-[#ffc600] border-[#ffc600];
+  @apply hover:bg-[#ffd133] hover:border-[#ffd133] hover:text-[#212529];
+  @apply active:bg-[#ffc600];
+}
+
+.col-md-8 {
+  @apply md:grow-0 shrink-0 md:basis-auto md:w-8/12;
 }
