--- a/web/src/css/landing.css
+++ b/web/src/css/landing.css
@@ -4,70 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.row-bs {
-  @apply flex flex-wrap -mx-3;
-}
-
-.row-bs > * {
-  @apply shrink-0 w-full max-w-full;
-
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
-
-  padding-right: calc(var(--bs-gutter-x) * .5);
-  padding-left: calc(var(--bs-gutter-x) * .5);
-  margin-top: var(--bs-gutter-y);
-}
-
-h2, .h2-bs {
-  font-size: calc(1.325rem + .9vw);
-}
-
-h2, .h2-bs, h1 {
-  @apply mt-0 mb-2 leading-[1.2];
-}
-
-.h2-bs {
-  @apply sm:text-[1.75rem] xl:text-[2rem];
-}
-
-.col {
-  @apply grow shrink-0 basis-0;
-}
-
-.col-md-2 {
-  @apply md:grow-0 shrink-0 md:basis-auto md:w-2/12;
-}
-
-.col-lg-6 {
-  @apply lg:grow-0 shrink-0 lg:basis-auto lg:w-6/12;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 * {
   @apply box-border;
-}
-
-header {
-  background-image: url('../../static/img/1.jpg');
-  background-position: 100% 100%;
-  height: 100vh;
-
-  @apply bg-cover bg-no-repeat;
 }
 
 footer {
@@ -92,14 +30,12 @@ a {
 }
 
 h1,
-h2, .h2-bs {
-  @apply font-display font-semibold;
+h2 {
+  @apply font-display font-semibold mt-0 mb-2 leading-[1.2];
 }
 
-@media (max-width: 992px) {
-  header {
-    background-position: 75% 100%;
-  }
+h2 {
+  @apply text-2xl;
 }
 
 .share-button {
@@ -114,7 +50,7 @@ img, svg {
 
 .btn {
   @apply select-none text-center cursor-pointer no-underline align-middle transition-all leading-normal;
-  @apply py-2 px-4 rounded-[2.5rem] border-[0.15rem] text-[1.75rem] border-solid border-transparent;
+  @apply p-4 rounded-[2.5rem] border-[0.15rem] text-[1.75rem] border-solid border-transparent;
   @apply bg-transparent text-[#212529];
 }
 
@@ -128,6 +64,26 @@ img, svg {
   @apply text-[#ffc600] border-[#ffc600];
   @apply hover:bg-[#ffd133] hover:border-[#ffd133] hover:text-[#212529];
   @apply active:bg-[#ffc600];
+}
+
+.row {
+  @apply flex flex-wrap -mx-3;
+}
+
+.row > * {
+  @apply shrink-0 w-full max-w-full px-3 mt-0;
+}
+
+.col {
+  @apply grow shrink-0 basis-0;
+}
+
+.col-md-2 {
+  @apply md:grow-0 shrink-0 md:basis-auto md:w-2/12;
+}
+
+.col-lg-6 {
+  @apply lg:grow-0 shrink-0 lg:basis-auto lg:w-6/12;
 }
 
 .col-md-8 {
