--- a/web/src/css/typefaces.css
+++ b/web/src/css/typefaces.css
@@ -2,10 +2,12 @@
   font-family: 'Montserrat';
   src: url('../../static/fonts/Montserrat-VariableFont_wght.woff2')
     format('woff2');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Open Sans';
   src: url('../../static/fonts/OpenSans-VariableFont_wdth,wght.woff2')
     format('woff2');
+  font-display: swap;
 }
