Add Umami tracking scripts

--- a/app/organizer/templates/auth/reset.html
+++ b/app/organizer/templates/auth/reset.html
@@ -69,6 +69,9 @@
         <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
+    <!-- Umami counter -->
+    <script defer src="https://stats.codecliffs.ru/script.js" data-website-id="d6a1ce1d-d123-4350-8e90-197585ce2b21"></script>
+    <!-- Umami counter -->
 </head>
 
 {% raw %}
